--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 /.settings/
 .project
 
-/spring-demo-01/.settings/
-/spring-demo-01/.project
-/spring-demo-01/.classpath
-/spring-demo-01/target/
+spring-demo-01/.settings/
+spring-demo-01/.project
+spring-demo-01/.classpath
+spring-demo-01/target/
+
+spring-bean/.settings/
+spring-bean/.project
+spring-bean/.classpath
+spring-bean/target/
