--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
 /.settings/
 .project
 
-/spring-demo-01/.settings/
-/spring-demo-01/.project
-/spring-demo-01/.classpath
-/spring-demo-01/target/
+spring-demo-01/.settings/
+spring-demo-01/.project
+spring-demo-01/.classpath
+spring-demo-01/target/
 
-/spring-bean/.settings/
-/spring-bean/.project
-/spring-bean/.classpath
-/spring-bean/target/
+spring-bean/.settings/
+spring-bean/.project
+spring-bean/.classpath
+spring-bean/target/
 
 spring-ioc-01/.settings/
 spring-ioc-01/.project
 spring-ioc-01/.classpath
-spring-ioc-01/target/   
+spring-ioc-01/target/
+
 
 spring-di-01/.settings/
 spring-di-01/.project
 spring-di-01/.classpath
 spring-di-01/target/
 
+spring-di-02/.settings/
+spring-di-02/.project
+spring-di-02/.classpath
+spring-di-02/target/
+
+spring-di-03/.settings/
+spring-di-03/.project
+spring-di-03/.classpath
+spring-di-03/target/
