--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,21 @@
   <packaging>pom</packaging>
   <modules>
   	<module>spring-demo-01</module>
-  	<module>spring-ioc-02</module>
+  	<module>spring-bean</module>
+	<module>spring-ioc</module>
+	<module>spring-di-01</module>
+	<module>spring-di-02</module>
+	<module>spring-di-03</module>
   </modules>
   
   <dependencies>
-  	<dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>4.3.9.RELEASE</version>
 		</dependency>
-  </dependencies>
+
+	</dependencies>
+  
+  
 </project>
