--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,26 @@ spring-di-03/.settings/
 spring-di-03/.project
 spring-di-03/.classpath
 spring-di-03/target/
+
+spring-di-04/.settings/
+spring-di-04/.project
+spring-di-04/.classpath
+spring-di-04/target/
+
+spring-di-05/.settings/
+spring-di-05/.project
+spring-di-05/.classpath
+spring-di-05/target/
+
+
+spring-aop-proxy/.settings/
+spring-aop-proxy/.project
+spring-aop-proxy/.classpath
+spring-aop-proxy/target/
+
+
+spring-aop-01/.settings/
+spring-aop-01/.project
+spring-aop-01/.classpath
+spring-aop-01/target/
+
