--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 	<module>spring-di-01</module>
 	<module>spring-di-02</module>
 	<module>spring-di-03</module>
+	<module>spring-di-04</module>
+	<module>spring-di-05</module>
+	<module>spring-aop-proxy</module>
+	<module>spring-aop-01</module>
   </modules>
   
   <dependencies>
