--- a/spring-aop-01/pom.xml
+++ b/spring-aop-01/pom.xml
@@ -6,7 +6,23 @@
 		<artifactId>spring-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>spring-di-03</artifactId>
-	
+	<artifactId>spring-aop-01</artifactId>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		
+
+	</dependencies>
 
 </project>
