--- a/spring-aop-proxy/pom.xml
+++ b/spring-aop-proxy/pom.xml
@@ -6,7 +6,14 @@
 		<artifactId>spring-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>spring-di-03</artifactId>
+	<artifactId>spring-aop-proxy</artifactId>
 	
+	<dependencies>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+	</dependencies>
 
 </project>
