--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,13 @@ spring-aop-01/.project
 spring-aop-01/.classpath
 spring-aop-01/target/
 
+spring-aop-02/.settings/
+spring-aop-02/.project
+spring-aop-02/.classpath
+spring-aop-02/target/
+
+spring-task-01/.settings/
+spring-task-01/.project
+spring-task-01/.classpath
+spring-task-01/target/
+
